@@ -1,0 +1,4 @@
+#!/bin/bash
+
+./pre-build.sh
+autoreconf -i
