@@ -2,10 +2,11 @@
 -----------------
 - Fix: Prevent the OCR being initialized more than once (happened on multiprogram and
   PAT changes)
+- New: Added Autoconf build scripts for CCExtractor to generate makefiles (mac).
 - New: Added .rpm package generation script.
 - New: Added build/installation script for .pkg.tar.xz (Arch Linux).
 - New: Added tarball generation script.
-- New: Added Autoconf build scripts for CCExtractor to generate makefiles.
+- New: Added Autoconf build scripts for CCExtractor to generate makefiles (linux).
   
 
 0.85b (2017-1-26)
